--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,7 @@
 *.svg    text eol=lf
 *.xml    text eol=lf
 *.sh     text eol=lf
+*.svg    text eol=lf
 
 # Custom for Visual Studio
 *.cs     diff=csharp
